--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,51 @@
 3. grab logos
 */
 
+@font-face {
+    font-family:metropolis;
+    src: url(fonts/metropolis.regular.otf);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
+    /* border: solid gray 1px; */
+}
+
+body {
+    text-align: center;
+    font-family: "metropolis", sans-serif;
+    color: #5c5a5a;
+}
+
+.navbar {
+    background-color: white !important;
+}
+
+img {
+    width: 200px;
+}
+
+h3 {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    color: #212529;
 }
 
 .btn {
-    border-radius: 0 ;
+    border-radius: 0;
     background-color: #212529;
 }
+
+#logo-bar {
+    background-color: #e8e5de;
+    padding: 0;
+    margin: 0;
+}
+/* .headline-par {
+    width: 400px;
+} */
 
 .form-control {
     min-width: 350px;
