--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h3 {
     margin: 0;
 }
 
-.testimonial-two {
+.bg-color {
     background-color: #b0bcaf;
 }
 
@@ -59,6 +59,10 @@ h3 {
     font-family: "Playfair Display";
     font-weight: bolder;
     font-size: larger;
+}
+
+.col {
+    min-width: 400px;
 }
 
 .form-control {
