--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     b0bcaf
 2. grab fonts
 3. grab logos
+
+- add 4 icon in features---
+- change par in features---
+- add grid system in accordion
+- change content accordion
 */
 
 @font-face {
@@ -16,7 +21,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* border: solid gray 1px; */
+    border: solid gray 1px;
 }
 
 body {
@@ -51,12 +56,17 @@ h3 {
     margin: 0;
 }
 
-.bg-color {
+.bg-color-1 {
     background-color: #b0bcaf;
 }
 
+.bg-color-2 {
+    background-color: #e5d4d3;
+    /* width: 100%; */
+}
+
 .klav {
-    font-family: "Playfair Display";
+    font-family: "Playfair Display", serif;
     font-weight: bolder;
     font-size: larger;
 }
