add grid system to accordion section

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 }
 
 body {
-    text-align: center;
+    /* text-align: center; */
     font-family: "metropolis", sans-serif;
     color: #5c5a5a;
 }
